# TBAddonManager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  addons.rpy  addons_screen.rpy  addons_styles.rpy  inject.rpy  main.py  main.spec  main_menu_patch.rpy  pyproject.toml  test_addon.rpy
internal/: config.py  downloading.py  interface.py  lang.py  resources.py  resources_rc.py
internal/resources/: resources.qrc
tl/arabic/: arabic.rpy
tl/chinese/: chinese.rpy
tl/english/: english.rpy
tl/italiano/: italiano.rpy
tl/japan/: japan.rpy
tl/turkish/: turkish.rpy
