[project]
name = "TBAddonManager"
version = "0.1.0"
description = "Addon Manager for Tiny Bunny"
authors = [
    {name = "ohfkgsofsex", email = "abuanin5@gmail.com"},
    {name = "tecquo", email = ""},
]
dependencies = ["PySide6>=6.10.1", "pyinstaller>=6.17.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
run-main = "python main.py"
run-qrc = "pyside6-rcc internal/resources/resources.qrc -o internal/resources_rc.py"
run-build = "pyinstaller main.spec"